<resources>
    <string name="app_name">Kotliin1</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="contact_number">Contact number</string>
    <string name="validate">Validate</string>
    <string name="next">Next</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login">Login</string>
    <string name="http_192_168_15_64">http://192.168.15.64</string>
    <string name="password_warning">By using Grant Type Password you will not be use User Management</string>
    <string name="authorize">Authorize</string>
    <string name="bottom">Bottom</string>
    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="l1">L1</string>
    <string name="r1">R1</string>
    <string name="l2">L2</string>
    <string name="r2">R2</string>
    <string name="hello_world">Hello World!</string>
    <string name="admin_cpi_com">admin@cpi.com</string>
    <string name="admin_123">Admin@123</string>
    <string name="_9a11790b3456qwfkjrj345sdfg">9a11790b3456QWfkjrj345sdfg</string>
    <string name="qwqdxacw34234sfsetraqwe">QWQDXACW34234SFsetraQWE</string>
    <string name="validation_success">Validation Successful</string>
    <string name="validation_fail">Please add valid details</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="enter_email">Please enter email</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="pass_length">Minimum length is 8</string>
    <string name="enter_contact">Contact number is required</string>
    <string name="invalid_contact">Invalid contact number</string>
    <string name="student_registration_form">Student Registration Form</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_department">Select Department</string>
    <string name="reading">Reading</string>
    <string name="traveling">Traveling</string>
    <string name="submit">Submit</string>
    <string name="sports">Sports</string>
    <string name="interests">Interests</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>

    <string name="full_name_error">Full name is required</string>
    <string name="email_error">Email is required</string>
    <string name="phone_error">Phone number is required</string>
    <string name="dob_error">Date of birth is required</string>
    <string name="department_error">Please select a department</string>
    <string name="gender_error">Please select your gender</string>
    <string name="interests_error">Please select at least one interest</string>
    <string name="invalid_email_error">Enter a valid email address</string>
    <string name="invalid_phone_error">Enter a valid 10-digit phone number</string>
    <string name="invalid_date_format_error">Enter a valid date in the format dd/MM/yyyy</string>
    <string name="invalid_date_error">Enter a valid date (e.g., 31/12/1999)</string>
    <string name="not_specified">Not Specified</string>
    <string name="student_saved">Student data saved!</string>
    <string name="student_updated">Student data updated!</string>
    <string name="add_student">Add Student</string>
    <string name="interests_sports_reading">Interests: Sports, Reading</string>
    <string name="gender_male">Gender: Male</string>
    <string name="department_computer_science">Department: Computer Science</string>
    <string name="phone_1234567890">Phone: 1234567890</string>
    <string name="email_john_example_com">Email: john@example.com</string>
    <string name="john_doe">John Doe</string>
    <string name="delete_student">Delete Student</string>
    <string name="sure_to_delete_student">Are you sure you want to delete this student?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>