<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen1A1"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/welcome"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:autofillHints=""
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:id="@+id/user_in"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:id="@+id/email_in"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints=""
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:id="@+id/pass_in"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number"
            android:autofillHints=""
            android:inputType="phone"
            android:layout_marginBottom="10dp"
            android:id="@+id/contact_in"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/next"
        android:id="@+id/next_btn">
    </Button>
</LinearLayout>