<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp8"
    app:cardCornerRadius="@dimen/dp8"
    app:cardElevation="@dimen/dp4">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AutoCompleteTextViewStyle"
        android:padding="@dimen/dp10">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnDelete"
            style="@style/IconEditDelete"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnEdit"
            style="@style/IconEditDelete"
            android:layout_marginTop="@dimen/dp10"
            android:src="@drawable/edit_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDelete"
            tools:src="@drawable/edit_note" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            style="@style/CardTitleTxt"
            android:text="@string/john_doe"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEmail"
            style="@style/CardValueTxt"
            android:text="@string/email_john_example_com"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPhone"
            style="@style/CardValueTxt"
            android:text="@string/phone_1234567890"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDepartment"
            style="@style/CardValueTxt"
            android:text="@string/department_computer_science"
            app:layout_constraintEnd_toEndOf="@+id/tvPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhone" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvGender"
            style="@style/CardValueTxt"
            android:text="@string/gender_male"
            app:layout_constraintEnd_toEndOf="@+id/tvDepartment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDepartment" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInterests"
            style="@style/CardValueTxt"
            android:text="@string/interests_sports_reading"
            app:layout_constraintEnd_toEndOf="@+id/tvGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGender" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
